column width, row height

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 template.size=8
+folder.template.excel.path=C:/Users/admin/Documents/import-excel/
+folder.export.path=C:/Users/admin/Documents/import-excel/
